--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,12 +1,13 @@
 <Project>
 
-	<PropertyGroup>
-		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-	</PropertyGroup>
+    <PropertyGroup>
+        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+    </PropertyGroup>
 
-	<ItemGroup>
-		<PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0" />
-		<PackageVersion Include="Serilog.AspNetCore" Version="10.0.0" />
-	</ItemGroup>
+    <ItemGroup>
+        <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0" />
+        <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10" />
+        <PackageVersion Include="Serilog.AspNetCore" Version="10.0.0" />
+    </ItemGroup>
 
 </Project>
