--- a/src/AndreyAkaSkif.ServiceDefaults.Serilog/AndreyAkaSkif.ServiceDefaults.Serilog.csproj
+++ b/src/AndreyAkaSkif.ServiceDefaults.Serilog/AndreyAkaSkif.ServiceDefaults.Serilog.csproj
@@ -13,7 +13,7 @@
 	</ItemGroup>
 
 	<PropertyGroup>
-		<RootNamespace>AndeyAkaSkif.ServiceDefaults.Logging.Serilog</RootNamespace>
+		<RootNamespace>AndreyAkaSkif.ServiceDefaults.Logging.Serilog</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
