--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -16,8 +16,10 @@ jobs:
         strategy:
             matrix:
                 project: [
-                    'src/AndeyAkaSkif.ServiceDefaults/AndeyAkaSkif.ServiceDefaults.csproj',
-                    'src/AndeyAkaSkif.ServiceDefaults.Serilog/AndeyAkaSkif.ServiceDefaults.Serilog.csproj'
+                    'src/AndreyAkaSkif.ServiceDefaults/AndreyAkaSkif.ServiceDefaults.csproj',
+                    'src/AndreyAkaSkif.ServiceDefaults.OpenApi/AndreyAkaSkif.ServiceDefaults.OpenApi.csproj',
+                    'src/AndreyAkaSkif.ServiceDefaults.Swagger/AndreyAkaSkif.ServiceDefaults.Swagger.csproj',
+                    'src/AndreyAkaSkif.ServiceDefaults.Serilog/AndreyAkaSkif.ServiceDefaults.Serilog.csproj',
                 ]
         steps:
             - name: 🛒 Checkout
