--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,14 +1,15 @@
 <Project>
-
     <PropertyGroup>
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     </PropertyGroup>
-
     <ItemGroup>
         <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0" />
         <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.10" />
+        <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="10.0.0" />
         <PackageVersion Include="Swashbuckle.AspNetCore" Version="9.0.6" />
         <PackageVersion Include="Serilog.AspNetCore" Version="10.0.0" />
+        <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
+        <PackageVersion Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.11" />
+        <PackageVersion Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
     </ItemGroup>
-
 </Project>
