--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,4 @@ jobs:
               run: dotnet build --configuration Release --no-restore
 
             - name: 🧪 Test
-              run: echo "Empty tests"
+              run: dotnet test --no-build --configuration Release --verbosity normal
