Добавлено конфигурирование базового пути
* Добавлено конфигурирование базового пути
* Добавлены тесты для объекта конфигурации. Объект крайне простой, но было неочевидно, как именно валидировать саброут
* Форматирование некоторых конфигурационных файлов изменено на основе новых настроек IDE в проекте

https://github.com/andrey-aka-skif/AndreyAkaSkif.ServiceDefaults/issues/9

--- a/nuget.config
+++ b/nuget.config
@@ -1,21 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<packageSources>
-		<clear />
-		<add key="nuget" value="https://api.nuget.org/v3/index.json" />
-		<add key="github" value="https://nuget.pkg.github.com/andrey-aka-skif/index.json" />
-	</packageSources>
+  <packageSources>
+    <clear />
+    <add key="nuget" value="https://api.nuget.org/v3/index.json" />
+    <add key="github" value="https://nuget.pkg.github.com/andrey-aka-skif/index.json" />
+  </packageSources>
 
-	<!-- Все пакеты по умолчанию с NuGet -->
-	<packageSourceMapping>
-		<clear />
-		<packageSource key="nuget">
-			<package pattern="*" />
-		</packageSource>
-	</packageSourceMapping>
+  <!-- Все пакеты по умолчанию с NuGet -->
+  <packageSourceMapping>
+    <clear />
+    <packageSource key="nuget">
+      <package pattern="*" />
+    </packageSource>
+  </packageSourceMapping>
 
-	<!-- Приватные пакеты с GitHub -->
-	<packageSource key="github">
-		<package pattern="AndreyAkaSkif.*" />
-	</packageSource>
+  <!-- Приватные пакеты с GitHub -->
+  <packageSource key="github">
+    <package pattern="AndreyAkaSkif.*" />
+  </packageSource>
 </configuration>
