--- a/src/ServiceDefaults.Swagger/ServiceDefaults.Swagger.csproj
+++ b/src/ServiceDefaults.Swagger/ServiceDefaults.Swagger.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AndreyAkaSkif.ServiceDefaults\AndreyAkaSkif.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\ServiceDefaults\ServiceDefaults.csproj" />
   </ItemGroup>
 
 </Project>
