--- a/tests/ServiceDefaults.Tests.Unit/ServiceDefaults.Tests.Unit.csproj
+++ b/tests/ServiceDefaults.Tests.Unit/ServiceDefaults.Tests.Unit.csproj
@@ -7,7 +7,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\AndreyAkaSkif.ServiceDefaults\AndreyAkaSkif.ServiceDefaults.csproj" />
+    <ProjectReference Include="..\..\src\ServiceDefaults\ServiceDefaults.csproj" />
   </ItemGroup>
 
   <ItemGroup>
