--- a/src/ServiceDefaults.Swagger/ServiceDefaults.Swagger.csproj
+++ b/src/ServiceDefaults.Swagger/ServiceDefaults.Swagger.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" />
   </ItemGroup>
 
   <ItemGroup>
