--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
         branches: ['**']
     pull_request:
         types: [opened, synchronize, reopened]
-    workflow_dispatch:
+    workflow_call: {}
 
 jobs:
     ci:
@@ -19,6 +19,13 @@ jobs:
             - name: ✨ Setup .NET
               uses: actions/setup-dotnet@v4
 
+            - name: 💾 Cache NuGet packages
+              uses: actions/cache@v4
+              with:
+                path: ~/.nuget/packages
+                key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
+                restore-keys: ${{ runner.os }}-nuget-
+
             - name: 🚚 Restore
               run: dotnet restore
 
@@ -26,4 +33,4 @@ jobs:
               run: dotnet build --configuration Release --no-restore
 
             - name: 🧪 Test
-              run: dotnet test --no-build --configuration Release --verbosity normal
+              run: dotnet test --configuration Release --no-build --verbosity normal
