--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,16 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 
-name: CI
+name: Continuous Integration
 
 on:
     push:
         branches: ['**']
     pull_request:
         types: [opened, synchronize, reopened]
-    workflow_dispatch:
+    workflow_call: {}
 
 jobs:
-    ci:
+    run-ci:
         runs-on: ubuntu-latest
         steps:
             - name: 🛒 Checkout
@@ -19,6 +19,13 @@ jobs:
             - name: ✨ Setup .NET
               uses: actions/setup-dotnet@v4
 
+            - name: 💾 Cache NuGet packages
+              uses: actions/cache@v4
+              with:
+                path: ~/.nuget/packages
+                key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
+                restore-keys: ${{ runner.os }}-nuget-
+
             - name: 🚚 Restore
               run: dotnet restore
 
@@ -26,4 +33,4 @@ jobs:
               run: dotnet build --configuration Release --no-restore
 
             - name: 🧪 Test
-              run: dotnet test --no-build --configuration Release --verbosity normal
+              run: dotnet test --configuration Release --no-build --verbosity normal
