--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -14,7 +14,7 @@
 
   <PropertyGroup>
     <!-- Версионирование -->
-    <Version Condition="'$(Version)' == ''">0.0.29</Version>
+    <Version Condition="'$(Version)' == ''">0.0.32</Version>
     <FileVersion>$(Version)</FileVersion>
     <AssemblyVersion>$(Version)</AssemblyVersion>
   </PropertyGroup>
@@ -61,7 +61,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
   </PropertyGroup>
 
 </Project>
