--- a/src/ServiceDefaults.Serilog/ServiceDefaults.Serilog.csproj
+++ b/src/ServiceDefaults.Serilog/ServiceDefaults.Serilog.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <RootNamespace>AndreyAkaSkif.ServiceDefaults.Logging.Serilog</RootNamespace>
+    <RootNamespace>$(Company).ServiceDefaults.Logging.Serilog</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
