--- a/src/ServiceDefaults.Swagger/ServiceDefaults.Swagger.csproj
+++ b/src/ServiceDefaults.Swagger/ServiceDefaults.Swagger.csproj
@@ -9,7 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="README.md" Pack="true" PackagePath="\">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
