--- a/src/ServiceDefaults/ServiceDefaults.csproj
+++ b/src/ServiceDefaults/ServiceDefaults.csproj
@@ -9,11 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="README.md" Pack="true" PackagePath="\">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
-    <InternalsVisibleTo Include="AndreyAkaSkif.ServiceDefaults.Tests.Unit"/>
+    <InternalsVisibleTo Include="AndreyAkaSkif.ServiceDefaults.Tests.Unit" />
   </ItemGroup>
 
   <ItemGroup>
